Closed
Bug 313234
Opened 20 years ago
Closed 17 years ago
crash [@ nsPop3Sink::IncorporateComplete]
Categories
(MailNews Core :: Networking: POP, defect)
MailNews Core
Networking: POP
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9.1b3
People
(Reporter: timeless, Assigned: mkmelin)
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(1 file)
|
1.17 KB,
patch
|
standard8
:
review+
standard8
:
superreview+
|
Details | Diff | Splinter Review |
Incident ID: 10438953
Stack Signature nsPop3Sink::IncorporateComplete 707aa5ff
Product ID ThunderbirdTrunk
Build ID 2005071208
Trigger Time 2005-10-09 12:47:47.0
Platform Win32
Operating System Windows NT 5.1 build 2600
Module THUNDE~1.EXE + (0053f43c)
URL visited
User Comments
Since Last Crash 148464 sec
Total Uptime 247201 sec
Trigger Reason Access violation
Source File, Line No.
e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mailnews/local/src/nsPop3Sink.cpp,
line 822
Stack Trace
nsPop3Sink::IncorporateComplete
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mailnews/local/src/nsPop3Sink.cpp,
line 822]
nsPop3Protocol::HandleLine
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mailnews/local/src/nsPop3Protocol.cpp,
line 3318]
nsPop3Protocol::RetrResponse
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mailnews/local/src/nsPop3Protocol.cpp,
line 3095]
nsPop3Protocol::ProcessProtocolState
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mailnews/local/src/nsPop3Protocol.cpp,
line 3710]
nsMsgProtocol::OnDataAvailable
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/mailnews/base/util/nsMsgProtocol.cpp,
line 350]
nsInputStreamPump::OnStateTransfer
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsInputStreamPump.cpp,
line 437]
nsInputStreamPump::OnInputStreamReady
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsInputStreamPump.cpp,
line 341]
nsOutputStreamReadyEvent::EventHandler
[e:/builds/tinderbox/thunderbird-trunk/WINNT_5.0_Depend/mozilla/xpcom/io/nsStreamUtils.cpp,
line 216]
0x778b0c24
Comment 1•17 years ago
|
||
hmm, still exists on talkback and for 20014 is a topcrash at #20. Here are some with their comments - stacks match this bug except for line number.
line 815
TB50050833 Deleting an e-mail account
TB50277992 i'm open a message
TB50417756 crashed Gmail POP account downloading messages ... [deleted account]
line 834
TB50259436 i was changing the host address in the properties
TB50493096 getting a lot of junk mail. so I wanted to shut down my email inbox.
does bug 454359 offer any insight?
Keywords: topcrash
QA Contact: networking.pop
Summary: [@ nsPop3Sink::IncorporateComplete] → crash [@ nsPop3Sink::IncorporateComplete]
791 // PublishMsgHdr clears m_newMsgHdr, so we need a comptr to
792 // hold onto it.
793 nsCOMPtr <nsIMsgDBHdr> hdr = m_newMailParser->m_newMsgHdr;
815 hdr->GetMessageKey(&saveMsgKey);
my bet is that hdr is null. this could probably use a null check.
| Assignee | ||
Comment 3•17 years ago
|
||
m_newMsgHdr looks to be null often enough to warrant a null check...
Assignee: nobody → mkmelin+mozilla
Attachment #350211 -
Flags: superreview?(bugzilla)
Attachment #350211 -
Flags: review?(bugzilla)
| Assignee | ||
Updated•17 years ago
|
Status: NEW → ASSIGNED
Comment 4•17 years ago
|
||
Comment on attachment 350211 [details] [diff] [review]
proposed fix
> // PublishMsgHdr clears m_newMsgHdr, so we need a comptr to
> // hold onto it.
>- nsCOMPtr <nsIMsgDBHdr> hdr = m_newMailParser->m_newMsgHdr;
>+ nsCOMPtr<nsIMsgDBHdr> hdr = m_newMailParser->m_newMsgHdr;
>+ if (!hdr)
>+ return NS_ERROR_FAILURE;
>+
As we're not quite sure when this happens, please add an assertion in here so that if developers come across it, they can be prompted to fix it. r/sr with the assertion added.
Attachment #350211 -
Flags: superreview?(bugzilla)
Attachment #350211 -
Flags: superreview+
Attachment #350211 -
Flags: review?(bugzilla)
Attachment #350211 -
Flags: review+
| Assignee | ||
Comment 5•17 years ago
|
||
Added the assertion, pushed.
changeset: 1361:f703356aef4b
http://hg.mozilla.org/comm-central/rev/f703356aef4b
->FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
OS: Windows XP → All
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b3
Comment 6•17 years ago
|
||
might be hard to verify fix's impact on current trunk - just two nsPop3Sink::IncorporateComplete crashes 3.0a3in last 2 weeks, on 12-05, same person bp-717a83da-55cb-43dd-96ba-5f4b52081205
(has fallen almost to #100 on talkback.)
OS: All → Windows XP
Hardware: All → PC
Target Milestone: mozilla1.9.1b3 → ---
| Assignee | ||
Updated•17 years ago
|
OS: Windows XP → All
Hardware: PC → All
Target Milestone: --- → mozilla1.9.1b3
Updated•17 years ago
|
Product: Core → MailNews Core
Updated•15 years ago
|
Crash Signature: [@ nsPop3Sink::IncorporateComplete]
You need to log in
before you can comment on or make changes to this bug.
Description
•