Bug 313234: crash [@ nsPop3Sink::IncorporateComplete]. r+sr=standard8